--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:13</td>   <td>0</td> <td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&lt;&lt;DataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:00:57</td>   <td>-16238</td> <td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&gt;&gt;DataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:09</td>   <td>-4034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:09</td>   <td>-4034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:09</td>   <td>-4034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:13</td>   <td>-80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:13</td>   <td>-80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="fd8e67">  <td>22/09/11 02:01:13</td>   <td>-80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="85aa78">  <td>22/09/11 02:01:00</td>   <td>-13323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">Test1</td> 
-  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="85aa78">  <td>22/09/11 02:01:06</td>   <td>-7737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">Test2</td> 
-  <td>main@766957197</td>   <td></td> </tr>
-<tr bgcolor="85aa78">  <td>22/09/11 02:01:11</td>   <td>-2606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@6f825516]">Test3</td> 
-  <td>main@766957197</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>0</td> <td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;DataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:29</td>   <td>-11180</td> <td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;DataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/11 02:56:40</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>22/09/11 02:56:32</td>   <td>-8667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test1</td> 
+  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>22/09/11 02:56:36</td>   <td>-4214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test2</td> 
+  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>22/09/11 02:56:40</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test3</td> 
+  <td>main@151593342</td>   <td></td> </tr>
 </table>
