--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>0</td> <td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;DataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:17</td>   <td>-6186</td> <td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;DataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>22/09/11 03:19:23</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>22/09/11 03:19:19</td>   <td>-3839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test1</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>22/09/11 03:19:23</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test2</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>22/09/11 03:19:23</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@7b36aa0c]">Test3</td> 
-  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:19</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&lt;&lt;DataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:03</td>   <td>-15245</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&gt;&gt;DataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:12</td>   <td>-6218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:12</td>   <td>-6218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:12</td>   <td>-6218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:16</td>   <td>-2440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:16</td>   <td>-2440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/09/17 00:36:16</td>   <td>-2440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>22/09/17 00:36:06</td>   <td>-12727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test123()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">Test123</td> 
+  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>22/09/17 00:36:10</td>   <td>-8523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">Test2</td> 
+  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>22/09/17 00:36:14</td>   <td>-4766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@1e0b4072]">Test3</td> 
+  <td>main@429075478</td>   <td></td> </tr>
 </table>
