--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:33</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&lt;&lt;DataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:20</td>   <td>-12502</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&gt;&gt;DataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:26</td>   <td>-6456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:26</td>   <td>-6456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:30</td>   <td>-2461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>22/09/11 01:07:30</td>   <td>-2461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>22/09/11 01:07:22</td>   <td>-10144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">Test1</td> 
-  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>22/09/11 01:07:28</td>   <td>-4969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@6fdbe764]">Test3</td> 
-  <td>main@1904783235</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:31</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&lt;&lt;DataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:18</td>   <td>-12519</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&gt;&gt;DataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:24</td>   <td>-7225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:24</td>   <td>-7225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:28</td>   <td>-2437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>22/09/17 00:27:28</td>   <td>-2437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/17 00:27:21</td>   <td>-9984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">Test1</td> 
+  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="aa8588">  <td>22/09/17 00:27:25</td>   <td>-5720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@4d154ccd]">Test3</td> 
+  <td>main@1835073088</td>   <td></td> </tr>
 </table>
